# myCommonLib

./: CHANGELOG.md  README.md  constants.py  loginit.py  pyproject.toml
.github/workflows/: poetry.yml  poetry_publish.yml
src/MyCommonLib/: __init__.py  configuration.py  constants.py  customLogger.py  dictman.py  loginit.py  software_mode.py  version.py
test/: test_version.py
tests/: test_configuration.py  test_loginit.py
