[project]
name = "MyCommonLib"
version = "0.8.1"
description = "Common library"
authors = [{name= "Romolo Politi", email= "romolo.politi@inaf.it"}]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["SETUP LIBS"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
repository = "https://github.com/RomoloPoliti-INAF/myCommonLib"
include = ["CHANGELOG.md"]
packages=[{include = "MyCommonLib", from="src"}]
requires-python = ">=3.10,<3.14"
dependencies=[
"rich (>=13.9.4)",
"pyyaml (>=6.0.2)",
"setuptools (>=80.9.0)",
"semantic-version-tools (>=1.3.1)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Bug Tracker" = "https://github.com/RomoloPoliti-INAF/myCommonLib/issues"
